begun implementing wallet selection from history

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
         <item>Extras</item>
     </string-array>
 
+    <string name="go_button">Go</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
