--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="back_button">Back</string>
     <string name="add_to_database">Store</string>
+    <string name="select_option">Please Select a Wallet</string>
+    <string name="get_new_wallet">Get New Wallet</string>
 </resources>
