--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,41 +1,40 @@
 <resources>
-    <string name="app_name">Buttcoin</string>
     <string-array name="ticker_titles">
         <item>15m: </item>
-        <item>Last: </item>
-        <item>Buy: </item>
-        <item>Sell: </item>
+        <item>Pasado: </item>
+        <item>Comprar: </item>
+        <item>vender: </item>
     </string-array>
     <string-array name="block_titles">
-        <item>Block Number</item>
+        <item>Número de Bloque </item>
         <item>Hash</item>
-        <item>Version</item>
-        <item>Confirmations</item>
-        <item>Time</item>
+        <item>Versión</item>
+        <item>Confirmaciones</item>
+        <item>Tiempo</item>
         <item>nb_txs</item>
         <item>Merkleroot</item>
-        <item>Next Block Number</item>
-        <item>Previous Block Number</item>
+        <item>Siguiente Número de Bloque</item>
+        <item>Número de Bloque Anterior</item>
         <item>Next Block Hash</item>
-        <item>Previous Block Hash</item>
-        <item>Fee</item>
-        <item>Vout Sum</item>
-        <item>Size</item>
-        <item>Difficulty</item>
-        <item>Days Destroyed</item>
+        <item>Siguiente Bloque de Hash</item>
+        <item>Cuota</item>
+        <item>Vout Suma</item>
+        <item>Tamaño</item>
+        <item>Dificultad</item>
+        <item>Días Destruidos</item>
         <item>Extras</item>
     </string-array>
     <string-array name="fragment_descriptors">
-        <item> View Block Info </item>
-        <item> View Wallet Balance </item>
-        <item> View Exchange Rates </item>
-        <item> View Price Chart </item>
+        <item> Ver Información del Bloque </item>
+        <item> Ver Balance de Wallet </item>
+        <item> Ver Tipos de Cambio </item>
+        <item> Ver Tabla de Precios </item>
     </string-array>
 
-    <string name="go_button">Go</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="go_button">Ir</string>
     <string name="back_button">Regresar</string>
-    <string name="add_to_database">Store</string>
-    <string name="select_option">Please Select a Wallet</string>
-    <string name="get_new_wallet">Get New Wallet</string>
+    <string name="add_to_database">Tienda</string>
+    <string name="select_option">Seleccione una Cartera</string>
+    <string name="get_new_wallet">Obtener una Nueva Cartera</string>
+    <string name="wallet_balance_displayer">Balance de Wallet: %1$s BTC</string>
 </resources>
