--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Buttcoin</string>
+    <string name="app_name" translatable="false">Buttcoin</string>
     <string-array name="ticker_titles">
         <item>15m: </item>
         <item>Last: </item>
@@ -33,9 +33,10 @@
     </string-array>
 
     <string name="go_button">Go</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="blank_message" translatable="false">.</string>
     <string name="back_button">Back</string>
     <string name="add_to_database">Store</string>
     <string name="select_option">Please Select a Wallet</string>
     <string name="get_new_wallet">Get New Wallet</string>
+    <string name="wallet_balance_displayer">Wallet Balance: %1$s BTC</string>
 </resources>
